--- a/src/components/cabecera/Cabecera.css
+++ b/src/components/cabecera/Cabecera.css
@@ -1,13 +1,4 @@
-.morning {
-  background-color: #FFD700; /* Amarillo para la mañana */
-}
-.afternoon {
-  background-color: #87CEEB; /* Azul claro para la tarde */
-}
-.night {
-  background-color: #2C3E50; /* Azul oscuro para la noche */
-  color: white; /* Color de texto blanco para la noche */
-}
+
 .cabecera{
   max-height: 350px;
   overflow: hidden;
@@ -42,13 +33,18 @@
   justify-content: center;
   align-items: center;
 }
+.cabecera_btn{
+  box-shadow: 2px 2px 2px 1px black;
+}
 .cabecera_btn:hover{
   cursor: pointer;
   background-color: rgb(1, 42, 56);
+  transform: scale(1.02);
 }
-@media (min-width:400px) {
+@media (max-width:500px) {
   .cabecera{
-    height: 400px;
+    min-height: 380px;
+    padding-bottom: 2px;
   }
   .cabecera_info1{
     width: 70%;
